# foldable1-classes-compat

./: .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  Makefile  README.markdown  cabal.haskell-ci  cabal.project  foldable1-classes-compat.cabal  foldable1.cabal  proposal2.md  proposal3.html  proposal3.md  semifoldable.cabal
.github/workflows/: haskell-ci.yml
bench/: Bench.hs
proposals/: README.markdown
src/Data/: Bifoldable1.hs  Foldable1.hs  Semifoldable.hs
test/: Tests.hs
